# LingoPet

./: .gitignore  AGENTS.md  ATTRIBUTIONS.md  CLAUDE.md  CONTRIBUTING.md  FEATURE_LOG.md  LICENSE  PRIVACY.md  README.md  README_en.md  SECURITY.md  diff_config.txt  package-lock.json  package.json  repair-codex.ps1  vite.config.ts
.github/workflows/: publish.yml
api/: share.ts  workshop-manage.ts
docs/: CNAME  daorujiaocheng.md  index.html  latest.json
pets/486/: metadata.json  pet.json
pets/Kun-like/: pet.json
pets/aemeath/: pet.json
pets/anya/: pet.json
pets/basketball-chick/: pet.json
pets/bocchi/: pet.json
pets/doro/: pet.json
pets/emilia/: pet.json
pets/endminguga/: pet.json
pets/ikun/: assemble-report.json  build-report.json  validation.json
pets/ikun-hoops/: pet.json
pets/ikunchick/: pet.json
pets/jielun/: pet.json
pets/kimlet-hover-clap/: pet.json
pets/kun/: pet.json
pets/kun-chick/: pet.json
pets/kunkun/: pet.json
pets/kunkun-pixel/: pet.json
pets/kunkundancing/: pet.json
pets/kunpet/: pet.json
pets/miaodex/: pet.json
pets/miku/: ai_input_prompt.txt  pet.json
pets/nahida/: pet.json
pets/nezukocoder/: ai_input_prompt.txt  pet.json
pets/reg/: pet.json
serverless/: share.ts  workshop-manage.ts
src/: lunar-javascript.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  pet_import.rs
src/pet/: index.html  (+2 more)
tools/: local-share-server.mjs  save_pet_action_outputs.py
vibepet-backend/: pom.xml
workshop/: update_index.yml
(+22 files in other folders)
